--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
   },
   "author": "",
   "license": "ISC",
+  "engines": {
+    "node": "v12.13.0"
+  },
   "dependencies": {
     "body-parser": "^1.19.0",
     "ejs": "^2.6.1",
