--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "node": "v12.13.0"
   },
   "dependencies": {
+    "async": "^3.1.0",
     "body-parser": "^1.19.0",
     "ejs": "^2.6.1",
     "express": "^4.17.1",
